Field read / write in argument to constructor call
Don't show preview-error below 23, but fall through to original error